# SampConsoleLauncher

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: main.c  main.h  utils.c  utils.h
